# JoJoLoader

./: Cargo.toml  README.md  build.rs  encrypt.py  icon.rc  一键生成.bat
output/: sigthief.py
src/: main.rs
src/forgery/: bundle.rs  mod.rs  test.rs
